# bromodels

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/tree/: getting_started.doctree  reference.doctree
.github/workflows/: release_pypi.yaml  test.yaml
_modules/: index.html
_modules/bromodels/GTM/: GeoTop.html
_modules/bromodels/HGM/: Regis.html
_sources/: index.rst.txt
docs/: conf.py
docs/tree/: getting_started.rst  reference.rst
examples/: 3DRender.py  MapPlots.py  PlotColumn.py
src/bromodels/: __init__.py
src/bromodels/GTM/: GTM_LITHO_CLASS_table.csv  GTM_STR_UNIT_table.csv  GeoTop.py  __init__.py  data.py
src/bromodels/HGM/: HGM_STR_table.csv  Regis.py  __init__.py  data.py
tests/: test_geotop.py  test_regis.py
tree/: getting_started.html  reference.html
