[build-system]
requires = [
    "setuptools",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "bromodels"
version = "0.0.1"
description = "The GEOTOP and REGIS data downloaded from the DINOloket OPeNDAP server."
dependencies = [
        "matplotlib>=3.3.3",
        "xarray[accel, io]>=2024.1.0",
]
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
readme = "README.md"
keywords = ["visualizing"]

[project.urls]
repository = "https://github.com/cemsbv/bromodels"

[project.optional-dependencies]
3d = ["pyvista"]
test = ["coveralls", "pytest"]
docs = [
    "ipython==7.30.1",
    "Sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "asteroid-sphinx-theme==0.0.3",
    "sphinx_rtd_theme==1.2.0",
    "m2r2==0.3.2",
]
lint = ["black", "isort"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bromodels = ["*.csv"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
files = ["bromodels"]
mypy_path = 'src'
namespace_packages = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_subclassing_any = true
no_implicit_optional = true
disallow_untyped_defs = true
strict_concatenate = true
disallow_any_generics = false
disallow_untyped_calls = true
warn_return_any = false
no_implicit_reexport = true
strict_equality = true
exclude = "tests"

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pytest.*",
    "setuptools.*",
    "xarray.*",
    "pandas.*",
    "matplotlib.*",
    "pyvista.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests/*"]
disallow_untyped_defs = false
